--- a/test_models.ipynb
+++ b/test_models.ipynb
@@ -197,29 +197,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from src.modules.app.st_functions import load_df, db_connector"
+    "from src.modules.app.st_functions import load_df, db_connector, load_tables, load_main_df, page_config()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = load_df()\n",
+    "conn = db_connector()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<duckdb.duckdb.DuckDBPyConnection object at 0x00000165478A1D30>\n"
+      "shape: (6, 40)\n",
+      "┌─────────────┬──────────┬────────────┬────────────┬───┬───────────┬────────────┬────────────┬─────┐\n",
+      "│ name        ┆ capacity ┆ unit_price ┆ offer_pric ┆ … ┆ wine_note ┆ nb_reviews ┆ conservati ┆ cru │\n",
+      "│ ---         ┆ ---      ┆ ---        ┆ e          ┆   ┆ ---       ┆ ---        ┆ on_time    ┆ --- │\n",
+      "│ str         ┆ f64      ┆ f64        ┆ ---        ┆   ┆ f64       ┆ i64        ┆ ---        ┆ i32 │\n",
+      "│             ┆          ┆            ┆ f64        ┆   ┆           ┆            ┆ i64        ┆     │\n",
+      "╞═════════════╪══════════╪════════════╪════════════╪═══╪═══════════╪════════════╪════════════╪═════╡\n",
+      "│ SAINT       ┆ 0.75     ┆ 13.5       ┆ null       ┆ … ┆ null      ┆ 0          ┆ 4          ┆ 0   │\n",
+      "│ POURÇAIN    ┆          ┆            ┆            ┆   ┆           ┆            ┆            ┆     │\n",
+      "│ ROUGE -     ┆          ┆            ┆            ┆   ┆           ┆            ┆            ┆     │\n",
+      "│ L'INSTANT…  ┆          ┆            ┆            ┆   ┆           ┆            ┆            ┆     │\n",
+      "│ LES         ┆ 0.75     ┆ 11.0       ┆ null       ┆ … ┆ null      ┆ 0          ┆ 7          ┆ 0   │\n",
+      "│ TERRASSES   ┆          ┆            ┆            ┆   ┆           ┆            ┆            ┆     │\n",
+      "│ 2021 -      ┆          ┆            ┆            ┆   ┆           ┆            ┆            ┆     │\n",
+      "│ CHÂTEAU     ┆          ┆            ┆            ┆   ┆           ┆            ┆            ┆     │\n",
+      "│ PES…        ┆          ┆            ┆            ┆   ┆           ┆            ┆            ┆     │\n",
+      "│ COSTIERES   ┆ 0.75     ┆ 13.0       ┆ null       ┆ … ┆ null      ┆ 0          ┆ 4          ┆ 0   │\n",
+      "│ DE NIMES -  ┆          ┆            ┆            ┆   ┆           ┆            ┆            ┆     │\n",
+      "│ FLEUR DE    ┆          ┆            ┆            ┆   ┆           ┆            ┆            ┆     │\n",
+      "│ SY…         ┆          ┆            ┆            ┆   ┆           ┆            ┆            ┆     │\n",
+      "│ AMOUR 2021  ┆ 0.75     ┆ 12.5       ┆ null       ┆ … ┆ null      ┆ 0          ┆ 2          ┆ 0   │\n",
+      "│ - DOMAINE   ┆          ┆            ┆            ┆   ┆           ┆            ┆            ┆     │\n",
+      "│ PRES LASSES ┆          ┆            ┆            ┆   ┆           ┆            ┆            ┆     │\n",
+      "│ COTES DU    ┆ 0.75     ┆ 12.9       ┆ null       ┆ … ┆ null      ┆ 0          ┆ 7          ┆ 0   │\n",
+      "│ RHONE       ┆          ┆            ┆            ┆   ┆           ┆            ┆            ┆     │\n",
+      "│ VIEILLES    ┆          ┆            ┆            ┆   ┆           ┆            ┆            ┆     │\n",
+      "│ VIGNES B…   ┆          ┆            ┆            ┆   ┆           ┆            ┆            ┆     │\n",
+      "│ ROSSO       ┆ 0.75     ┆ 9.5        ┆ null       ┆ … ┆ null      ┆ 0          ┆ 4          ┆ 0   │\n",
+      "│ PICENO 2022 ┆          ┆            ┆            ┆   ┆           ┆            ┆            ┆     │\n",
+      "│ - SALADINI  ┆          ┆            ┆            ┆   ┆           ┆            ┆            ┆     │\n",
+      "│ PIL…        ┆          ┆            ┆            ┆   ┆           ┆            ┆            ┆     │\n",
+      "└─────────────┴──────────┴────────────┴────────────┴───┴───────────┴────────────┴────────────┴─────┘\n"
      ]
     }
    ],
    "source": [
-    "df = load_df()\n",
-    "print(db_connector())"
+    "print(load_main_df(df,[\"Vin Rouge\"], (0.,15.), {1},{1},{0}, \"\"))"
    ]
   }
  ],
