--- a/todo.txt
+++ b/todo.txt
@@ -1,11 +1,9 @@
-préciser la licence du projet
-faire un readme digne de ce nom
-axe d'amélioration => spacy et NLP
-how to streamlit test ?
+TODOS :
 
-MYPY passing :
 
-- st_functions
-- st_plots
-- st_tables
-- bear_cleaner
+
+- doctest
+- déployer l'app sur le cloud streamlit
+- Docker
+- préciser la licence du projet
+- axe d'amélioration => spacy et NLP
